Started designingt tooltips

--- a/Frontend/profile-settings/css/profile-settings.css
+++ b/Frontend/profile-settings/css/profile-settings.css
@@ -90,7 +90,7 @@ main .col {
   position: relative;
   display: inline-block;
   font-size: 1rem; /* Adjust size */
-  margin-top: 4em;
+  margin-bottom: 4em;
 }
 
 .switch-container input {
@@ -145,7 +145,7 @@ main .col {
   font-size: 2em;
   font-weight: bold;
   position: relative;
-  top: -2.5rem;
+  top: 1.25em;
   left: 0;
   cursor: pointer;
 }
@@ -164,6 +164,10 @@ main a {
 
 main a:hover {
   color: #2699FB;
+}
+
+.col h3 {
+  margin-top: 0;
 }
 
 .col .pic-container {
