--- a/Frontend/material-inputs/css/material-inputs.css
+++ b/Frontend/material-inputs/css/material-inputs.css
@@ -158,7 +158,7 @@ body {
  */
 
 input {
-    cursor: pointer;
+    cursor: text;
 }
 
 .text-input-container,
@@ -170,7 +170,7 @@ input {
     height: 2.5em;
     font-size: 1rem; /* adjust size */
     margin-top: 1.5em;
-    cursor: pointer;
+    cursor: text;
 }
 
 .text-input-container.disabled input,
@@ -228,7 +228,7 @@ input {
     top: 0.25em;
     left: 0;
     color: white;
-    cursor: pointer;
+    cursor: text;
     transition: color 0.2s ease;
 }
 
@@ -249,7 +249,7 @@ input {
     opacity: 0.4;
     font-style: italic;
     transition: 0.5s ease, color 0.2s ease;
-    cursor: pointer;
+    cursor: text;
 }
 
 .text-input-container:hover label.icon,
@@ -1168,7 +1168,7 @@ textarea {
     padding: 0.75rem 0.75rem;
     font-family: "Source Sans Pro", sans-serif;
     transition: 0.2s ease;
-    cursor: pointer;
+    cursor: text;
     position: relative;
 }
 
