--- a/Frontend/carousels/css/carousels.css
+++ b/Frontend/carousels/css/carousels.css
@@ -65,248 +65,182 @@ body {
   display: table;
 }
 
-.mail-content {
-  top: 0;
-  width: 100%;
-  height: auto;
-  padding: 3rem;
-  transition: transform 1s ease, top 1s ease, opacity 0.5s ease 0.75s;
-  position: relative;
-}
-
-.mail-content h3 {
-  font-size: 2rem;
-  margin-left: -1.5rem;
-  margin-bottom: 1rem;
-  text-shadow: 2px 2px 6px black;
-}
-
-a.choose-clubs {
-  position: relative;
-  margin-left: 2rem;
-  float: left;
-  display: inline-block;
-  padding: 0.5rem 2rem;
-}
-
-.darkmode a.choose-clubs {
-  background-color: #272727;
-  color: #2699FB;
-}
-
-a.choose-clubs:hover {
-  background-color: #2699FB;
-  color: #272727;
-}
-
-a.choose-clubs.disabled {
-  background-color: #272727;
-}
-
-div.chosen-clubs {
-  margin: 1rem 0;
-  display: block;
-}
-
-.chosen-clubs .club-container {
-  background-color: #272727;
-  border-radius: 50px;
-  height: 2.5rem;
-  display: inline-block;
-  padding-left: 1rem;
-  margin-right: 0.5rem;
-}
-
-.club-container .club-name {
-  position: relative;
-  top: -0.9rem;
-  margin-right: 0.5rem;
-}
-
-.club-container a {
-  border-radius: 50%;
-  height: 2.5rem;
-  width: 2.5rem;
-  position: relative;
-  text-align: center;
-  top: 0;
-  display: inline-block;
-}
-
-.club-container a:hover {
-  background-color: #4A4A4A;
-}
-
-.club-container a i {
-  font-size: 1.5rem;
-  padding: 0.25rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.club-container a:hover i {
-  color: #8D0909;
-}
-
-form.mail-content .radio-input-container {
-  font-size: 1.25rem;
-}
-
-.modal-window form {
-  width: 100%;
-}
-
-.modal-window .all-clubs {
-  width: 75%;
+.carousel-container {
+  width: 15rem;
   margin: 0 auto;
-}
-
-a.primary-button {
-   text-align: center;
-   display: inline-block;
-   width: 4em;
-   height: 4em;
-   margin: 2em;
-   color: white;
-   transition: 0.2s ease;
-   background-color: transparent;
-   transform-style: preserve-3d;
-   font-size: 1rem;
- }
-
-.primary-button.send {
-  float: left;
-}
-
-.primary-button.cancel {
-  float: right;
-}
-
-a.primary-button:before {
-  content: '';
-  position: absolute;
-  border-radius: 50%;
-  border: 2px solid white;
-  width: 0;
-  height: 0;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  z-index: -1;
-  transition: 0.2s ease;
-  box-shadow: 0 0 20px 3px #2699FB inset, 0 0 10px 3px black;
-}
-
-a.primary-button.cancel:before {
-  box-shadow: 0 0 20px 3px #F71735 inset, 0 0 10px 3px black;
-}
-
-a.primary-button:hover:before {
-  width: 220%;
-  height: 220%;
-  opacity: 1;
-  border-color: #2699FB;
-}
-
-a.primary-button.cancel:hover:before {
-  border-color: #F71735;
-}
-
-.primary-button i {
-  color: #3D76E1;
-  position: absolute;
-  font-size: 5em;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: 0.2s ease;
-  z-index: 2;
-  transform-style: preserve-3d;
-}
-
-.primary-button:hover i {
-  color: #2699FB;
-  top: 20%;
-  transform: translate(-50%, -50%) scale(1.1) translateZ(30px);
-}
-
-.primary-button.cancel i {
-  color: #B23A48;
-}
-
-.primary-button.cancel:hover i {
-  font-weight: bold;
-  color: #F71735;
-}
-
-.primary-button p {
-  top: 50%;
-  left: 50%;
-  margin: 0;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  font-size: 1em;
-  transition: 0.2s ease;
-  z-index: 1;
-  opacity: 0;
-  transform-style: preserve-3d;
-}
-
-.primary-button:hover p {
-  top: 100%;
-  opacity: 1;
-  transform: translate(-50%, -50%) translateZ(15px);
-}
-
-.envelope {
+  height: 20rem;
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  color: black;
-  opacity: 0.3;
-  font-size: 25rem;
-  z-index: -1;
-  transition: opacity 1.25s ease, transform 1.25s ease, left 1s ease-out 1.5s;
+  transform: translate(-50%, -50%);
+  transition: 0.5s ease;
+  z-index: 10;
+  perspective: 1000px;
+  transform-style: preserve-3d;
 }
 
-.sent .mail-content {
-  top: -10%;
-  transform: scale(0.2);
-  opacity: 0;
+body.open-accordion .carousel-container {
+  bottom: 2rem;
 }
 
-.sent .envelope {
-  opacity: 0.9;
-  transform: translate(-50%, -50%) scale(1.5);
-  left: 200%;
+.carousel-container .page-wrapper {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  transform-style: preserve-3d;
+}
+
+.carousel-container .page {
+  position: absolute;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  top: 0;
+  left: 0;
+  box-shadow: 0 0 15px 3px black;
+  z-index: 2;
+  background: radial-gradient(circle at 0% 100%, rgba(48, 48, 48, 1) 60%, rgba(61, 118, 225, 0.75));
+  font-size: 1rem;
+  opacity: 1;
+  display: inline-block;
+  backface-visibility: hidden;
+}
+
+.carousel-container .page.inactive {
+  opacity: 0.5;
+  color: #828282;
+}
+
+.carousel-container .page.inactive a {
+  pointer-events: none;
+  cursor: default;
+  text-decoration: none;
+}
+
+.page h3 {
+  margin-top: 40%;
+  font-size: 1.5em;
+  padding: 0.25em 0;
+  border-top: 3px solid #4A4A4A;
+  border-bottom: 3px solid #4A4A4A;
+  box-shadow: 0 20px 20px -18px black, 0 -20px 20px -18px black;
+  text-align: center;
+  letter-spacing: 0.05em;
+  font-weight: normal;
+}
+
+.secondary-button {
+  position: absolute;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  bottom: 1em;
+  left: 50%;
+  display: inline-block;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  background: #171717;
+  transition: 0.5s ease;
+  font-size: 0.75em;
+  width: 90%;
+  height: auto;
+  transform: translateX(-50%);
+  border: 2px solid #3D76E1;
+  color: white;
+}
+
+.secondary-button:hover,
+.secondary-button:focus {
+  border: 2px solid #2699FB;
+  color: #2699FB;
+}
+
+.secondary-button:before {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  width: calc(100% + 6px);
+  height: calc(100% - 1em);
+  background: #171717;
+  top: 0.5em;
+  left: -3px;
+  transition: 0.5s ease;
+}
+
+.secondary-button:after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  width: calc(100% - 1em);
+  height: calc(100% + 4px);
+  background: #171717;
+  top: -2px;
+  left: 0.5em;
+  transition: 0.5s ease;
+}
+
+.secondary-button:hover:before,
+.secondary-button:focus:before {
+  top: 50%;
+  height: 0;
+}
+
+.secondary-button:hover:after,
+.secondary-button:focus:after {
+  left: 50%;
+  width: 0;
+}
+
+.secondary-button .text {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: block;
+  font-size: 1.5em;
+  padding: 0.5em 3em;
+  overflow: hidden;
+  z-index: 10;
+}
+
+.secondary-button .ripple {
+  position: absolute;
+  background-color: white;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  animation: ripple 1s ease-out infinite;
+  pointer-events: none;
+}
+
+@keyframes ripple {
+  from {
+    width: 0;
+    height: 0;
+    opacity: 0.7;
+  }
+  to {
+    width: 50rem;
+    height: 50rem;
+    opacity: 0;
+  }
 }
 
 @media only screen and (min-width: 600px) {
-  .mail-content {
-    padding: 4rem;
-  }
+
 }
 
 @media only screen and (min-width: 768px) {
-  .mail-content {
-    padding: 5rem;
-  }
+
 }
 
 @media only screen and (min-width: 992px) {
-  .mail-content {
-    margin: 0 auto;
-    width: 75%;
-    padding: 0;
-  }
+
 }
 
 @media only screen and (min-width: 1200px) {
-  .mail-content {
-    width: 900px;
-  }
+
 }
